--- a/Resume_style.css
+++ b/Resume_style.css
@@ -163,7 +163,7 @@ a:hover {
 }
 .project-items {
     min-width: 26%;
-    background-color: #ffffff;
+    background-color: #cdcdcd;
     min-height: 210px;
     margin: 1% auto;
     box-shadow: 0px 0px 4px 1px  rgb(65, 65, 65);
@@ -171,7 +171,7 @@ a:hover {
 }
 .project-item-image {
     min-width: 100%;
-    background-color: #f2ecec;
+    background-color: #ffffff;
     min-height: 150px;
     /* margin: 1% auto; */
     border-bottom: 2px dotted black;
@@ -193,7 +193,16 @@ a:hover {
 }
 
 #whatsapp-clone {
-    background-image: url(./Pic_shrey.jpeg);
+    background-image: url(./images/WhatsApp_icon.png);
+}
+#To-Do {
+    background-image: url(./images/todo.png);
+}
+#keep-note {
+    background-image: url(./images/keep_notes.png);
+}
+#Web-based-resume {
+    background-image: url(./images/resume.png);
 }
 @media (max-width: 768px) {
     h1 {
