--- a/Resume_style.css
+++ b/Resume_style.css
@@ -123,7 +123,11 @@ a:hover {
     margin-right: auto;
     margin-left: 7%;
 }
-
+header a {
+    color: rgb(178, 85, 85);
+    font-size: 12px;
+    margin: auto;
+}
 
 .right {
     /* margin-bottom: 20px;/ */
