--- a/Resume_style.css
+++ b/Resume_style.css
@@ -259,3 +259,59 @@ header a {
         padding-top: 5px;
     }
 }
+
+@media (max-width: 512px) {
+    h1 {
+        font-size: 19px;
+    }
+
+    h2 {
+        font-size: 15px;
+    }
+
+    p {
+        font-size: 8px;
+    }
+    a {
+        font-size: 8px;
+    }
+    
+    #e-image a {
+        font-size: 5px;
+    }
+
+    /* Reduce margins and padding for sections */
+    section {
+        margin-bottom: 20px;
+    }
+
+    #image {
+        min-width: 100px;
+        max-width: 140px;
+        min-height: 100px;
+        /* background-image: url(Pic_shrey.jpeg);
+        background-size: 100%;
+        border-radius: 100%;
+        background-repeat: no-repeat;
+        */
+        margin-right: 8%;
+        margin-left: auto;
+        /* position: relative; */
+
+    }
+
+    #details {
+        margin-right: auto;
+        /* margin-left: 5%; */
+    }
+
+    /* Reduce border thickness for sections */
+    section#education,
+    section#certifications,
+    section#projects,
+    section#skills,
+    section#additional {
+        border-top: 1px solid #333;
+        padding-top: 5px;
+    }
+}
