--- a/index468.css
+++ b/index468.css
@@ -86,4 +86,118 @@
         min-height: 3px;
         max-height: 3px;
     }
+    .achievements-li li {
+        font-size: 7px;
+    }
+}
+
+
+
+@media (max-width: 368px) {
+    section {
+        margin: 15px auto;
+    }
+    #bg-right {
+        min-height: 550px;
+    }
+    #head-div {
+        right: 28%;
+        min-width: 130%;
+        max-width: 130%;
+        min-height: 110px;
+        max-height: 110px;
+    }
+    #bg-right-top,#bg-left-top {
+        min-height: 160px;
+        max-height: 160px;
+    }
+    #profile-image img{
+        min-width: 70px;
+        max-width: 70px;
+        min-height: 70px;
+        max-height: 70px;
+    }
+
+    .achievements-li li {
+        font-size: 6px;
+    }
+    #head-content {
+        min-width: 80%;
+        /* background-color: antiquewhite; */
+        max-width: 80%;
+        min-height: 90px;
+        max-height: 90px;
+        right: 0px;
+        left: -30px;
+    }
+    #head-name{
+        /* font-size: 15px; */
+        margin-top: -11px;
+        margin-bottom: -10px;
+        font-size: 12px;
+        font-weight: bolder;
+    }
+    #head-proffesion{
+        margin-bottom: -8px;
+        font-size: 10px;
+        font-weight: bold;
+    }
+    #head-details{
+        font-size: 7.7px;
+    }
+
+
+    #bg-right-low,#bg-left-low {
+        margin-top: -3px;
+        min-height: 360px;
+    }
+    .container-header {
+        font-size: 11px;
+    }
+
+    .contact-info-logo img {
+        min-width: 15px;
+        max-width: 15px;
+        min-height: 15px;
+        max-height: 15px;
+    }
+
+    .contact-info-text p {
+        font-size: 6px;
+    }
+    .education-details-clg p{
+        font-size:6px;
+        font-weight: 500;
+    }
+    .achievements-li li{
+        font-size: 6px;
+    }
+    .lower-margin{
+        margin-top: -40px;
+        font-size: 8px;
+    }
+    .refrence p{
+        font-size: 8px;
+        /* margin-bottom: -30px; */
+    }
+    .low-margin{
+        margin-top: 0px;
+    }
+    .low-margin p{
+        margin-top: 5px;
+    }
+    
+    .small-circle-brown-filled {
+        min-width: 3px;
+        max-width: 3px;
+        min-height: 3px;
+        max-height: 3px;
+    }
+
+    .small-circle-brown-empty {
+        min-width: 3px;
+        max-width: 3px;
+        min-height: 3px;
+        max-height: 3px;
+    }
 }
